# SkillProposer

./: .gitignore  Assumptions.md  TECH_STACK.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
CV_sources/: adam_mazur_architect.md  agnieszka_piotrowska_analyst.md  alicja_zajac_tester.md  anna_nowak_dev.md  barbara_kaczmarek_tester.md  ewa_dabrowska_architect.md  jan_kowalski_dev.md  joanna_michalska_tester.md  karolina_grabowska_analyst.md  katarzyna_wojcik_dev.md  krzysztof_baranowski_architect.md  magdalena_szymanska_architect.md  marcin_wisniewski_tester.md  marek_jankowski_devops.md  michal_krawczyk_analyst.md  pawel_kaminski_analyst.md  piotr_zielinski_dev.md  robert_nowakowski_tester.md  tomasz_lewandowski_architect.md  zofia_lis_analyst.md
candidates/: agents.py  forms.py  models.py  urls.py  views.py
candidates/agents/: BaseAgent.py  SkillExtractionAgent.py  SkillSet.py  (+1 more)
chroma_db/: chroma.sqlite3
core/: settings.py  urls.py
ingestion/: agents.py  forms.py  models.py  urls.py  views.py
steps/: 01_environment_setup.md  02_django_project_setup.md  03_define_django_models.md  04_document_processing_agent_setup.md  05_activate_venv_note.md  06_langchain_document_loaders.md  06a_fix_missing_package.md  07_text_chunking_and_vector_store.md  07a_fix_text_splitter_import.md  08_django_upload_view.md  09_skill_extraction_agent.md  09a_configure_openai_gemini.md  10_candidate_search_interface.md  11_team_composition_agent.md  12_bootstrap_ui_and_navigation.md  13_local_bootstrap_setup.md  14_automated_bootstrap_with_npm.md
(+12 files in other folders)
