[project]
name = "skillproposer"
version = "0.1.0"
description = "SkillProposer project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "django>=5.0",
    "django-environ",
    "chromadb",
    "langchain",
    "langgraph",
    "google-generativeai",
    "python-docx",
    "pypdf",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
